syntax = "proto3";

package users;

message User {
    int32 id = 1;
    string name = 2;
    string email = 3;
}

message Empty {}

service Users {
    rpc GetUsers(Empty) returns (stream User) {};
    rpc CreateUser(User) returns (User) {};
    rpc CreateUserStream(stream User) returns (stream User) {};
}